<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lynx</string>
    <string name="lynx">LYNX</string>
    <string name="action_settings">Settings</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_my_requests">My Requests</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_register">Register</string>
    <string name="enter_username">Username</string>
    <string name="enter_display_name">Display Name</string>
    <string name="enter_password">Password</string>
    <string name="enter_password_confirm">Confirm Password</string>
    <string name="swipe">Swipe Left to Link Accounts</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Register</string>
    <string name="title_section2">Facebook</string>
    <string name="title_section3">LinkedIn</string>
    <string name="title_section4">Google</string>
    <string name="title_section5">Twitter</string>
    <string name="title_section6">GO!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_linked_login">LinkedLoginActivity</string>
    <string name="user">User</string>
    <string name="view_profile">View Profile</string>
    <string name="facebook_app_id">870809469626549</string>
    <string name="title_facebook_login">LoginButton</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_lynx">LYNX</string>
    <string name="user_info_username">Username</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="title_activity_my_requests">My Requests</string>
    <string name="action_my_profile">My Profile</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="make_request">Make Request</string>
    <string name="title_activity_requests">RequestsActivity</string>
    <string name="accept_request">Accept Request</string>
    <string name="reject_request">Reject Request</string>

</resources>
