<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lynx.RegisterActivity">

    <!-- Register progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/register_form"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/title_register"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textSize="50sp"
                android:id="@+id/register_text_view"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/username_edit_text"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_username"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/display_name_edit_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_display_name"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_edit_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_password"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/confirm_password_edit_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_password_confirm"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/action_register"
                android:id="@+id/Register_Button_Lynx"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:onClick="attemptRegister"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
