<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lynx.UserInfoActivity">

    <!-- Get user data progress -->
    <ProgressBar
        android:id="@+id/user_data_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/userData"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user_info_username"
                android:id="@+id/userInfoUsername"
                android:layout_weight="1"
                android:textSize="50sp" />

            <CheckedTextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/facebook"
                android:id="@+id/facebookCheckedText"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="true"
                android:layout_marginTop="16dp" />

            <CheckedTextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/linkedin"
                android:id="@+id/linkedInCheckedText"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false" />

            <CheckedTextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/google"
                android:id="@+id/googleCheckedText"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false" />

            <CheckedTextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/twitter"
                android:id="@+id/twitterCheckedText"
                android:layout_weight="1"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
