<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/lynx"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="50sp"
        android:paddingTop="50dp"
        android:gravity="center"
        android:id="@+id/register_text_view" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/register_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:id="@+id/sign_in_button"
            android:layout_weight="1"
            android:onClick="signIn" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            android:layout_weight="1"
            android:text="@string/action_register"
            android:singleLine="false"
            android:onClick="register" />
    </LinearLayout>

</RelativeLayout>
